--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -21,6 +21,7 @@ monitor= eDP-1, 1920x1080@59.93400, 0x0, 1.00
 
 # Add networkmanager applet to tray in waybar
 exec-once = nm-applet --indicator
+exec-once = blueman-applet
 
 # Set keyboard layout
 #exec-once = .local/bin/garuda-locale.sh
@@ -139,7 +140,8 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod, 36, exec, footclient
-bind = $mainMod, T, exec, footclient
+bind = $mainMod, T, exec, kitty
+bind = $mainMod, W, exec, wezterm
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exec, nwgbar
 bind = $mainMod, N, exec, thunar
@@ -156,8 +158,10 @@ bind = $mainMod, F3, exec, thunar
 bind = $mainMod, F4, exec, geany
 bind = $mainMod, F5, exec, github-desktop
 bind = $mainMod, F6, exec, gparted
-bind = $mainMod, F7, exec, inkscape
-bind = $mainMod, F8, exec, blender
+# bind = $mainMod, F7, exec, inkscape
+ bind = $mainMod, F7, exec, wezterm
+# bind = $mainMod, F8, exec, blender
+bind = $mainMod, F8, exec, obsidian
 bind = $mainMod, F9, exec, meld
 bind = $mainMod, F10, exec, joplin-desktop
 bind = $mainMod, F11, exec, snapper-tools
