--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -2,7 +2,7 @@
 
 shell=fish #(if set, otherwise user's default shell from /etc/passwd)
 # term=foot (or xterm-256color if built with -Dterminfo=disabled)
-# login-shell=no
+ login-shell=no
 
 # app-id=foot
 # title=foot
@@ -28,12 +28,12 @@ font= JetbrainsMonoNL:size=14
 # pad=0x0                             # optionally append 'center'
 # resize-delay-ms=100
 
-# notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
+#  notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
 # bold-text-in-bright=no
-# word-delimiters=,│`|:"'()[]{}<>
-# selection-target=primary
-# workers=<number of logical CPUs>
+ word-delimiters=,│`|:"'()[]{}<>
+ selection-target=primary
+ workers=8
 # utempter=/usr/lib/utempter/utempter
 
 [environment]
@@ -46,10 +46,10 @@ font= JetbrainsMonoNL:size=14
 # command-focused=no
 
 [scrollback]
-# lines=1000
-# multiplier=3.0
-# indicator-position=relative
-# indicator-format=""
+ lines=1000
+ multiplier=3.0
+ indicator-position=relative
+ indicator-format=""
 
 [url]
 # launch=xdg-open ${url}
@@ -102,20 +102,20 @@ bright7=e6e6e6   # bright white
 # button-close-color=<regular1>
 
 [key-bindings]
-# scrollback-up-page=Shift+Page_Up
-# scrollback-up-half-page=none
+ scrollback-up-page=Shift+Page_Up
+ scrollback-up-half-page=none
 # scrollback-up-line=none
-# scrollback-down-page=Shift+Page_Down
-# scrollback-down-half-page=none
+ scrollback-down-page=Shift+Page_Down
+ scrollback-down-half-page=none
 # scrollback-down-line=none
-# clipboard-copy=Control+Shift+c XF86Copy
-# clipboard-paste=Control+Shift+v XF86Paste
+ clipboard-copy=Control+Shift+c XF86Copy
+ clipboard-paste=Control+Shift+v XF86Paste
 # primary-paste=Shift+Insert
 # search-start=Control+Shift+r
-# font-increase=Control+plus Control+equal Control+KP_Add
-# font-decrease=Control+minus Control+KP_Subtract
+ font-increase=Control+plus Control+equal Control+KP_Add
+ font-decrease=Control+minus Control+KP_Subtract
 # font-reset=Control+0 Control+KP_0
-# spawn-terminal=Control+Shift+n
+ spawn-terminal=Control+Shift+n
 # minimize=none
 # maximize=none
 # fullscreen=none
@@ -125,29 +125,29 @@ bright7=e6e6e6   # bright white
 # show-urls-launch=Control+Shift+u
 # show-urls-copy=none
 # show-urls-persistent=none
-# prompt-prev=Control+Shift+z
-# prompt-next=Control+Shift+x
+ prompt-prev=Control+Shift+z
+ prompt-next=Control+Shift+x
 # unicode-input=none
 # noop=none
 
 [search-bindings]
-# cancel=Control+g Control+c Escape
-# commit=Return
-# find-prev=Control+r
-# find-next=Control+s
+ cancel=Control+g Control+c Escape
+ commit=Return
+ find-prev=Control+r
+ find-next=Control+s
 # cursor-left=Left Control+b
 # cursor-left-word=Control+Left Mod1+b
 # cursor-right=Right Control+f
 # cursor-right-word=Control+Right Mod1+f
-# cursor-home=Home Control+a
-# cursor-end=End Control+e
-# delete-prev=BackSpace
+ cursor-home=Home Control+a
+ cursor-end=End Control+e
+ delete-prev=BackSpace
 # delete-prev-word=Mod1+BackSpace Control+BackSpace
 # delete-next=Delete
-# delete-next-word=Mod1+d Control+Delete
+ delete-next-word=Mod1+d Control+Delete
 # extend-to-word-boundary=Control+w
 # extend-to-next-whitespace=Control+Shift+w
-# clipboard-paste=Control+v Control+Shift+v Control+y XF86Paste
+ clipboard-paste=Control+v Control+Shift+v Control+y XF86Paste
 # primary-paste=Shift+Insert
 # unicode-input=none
 
@@ -156,7 +156,7 @@ bright7=e6e6e6   # bright white
 # toggle-url-visible=t
 
 [text-bindings]
-# \x03=Mod4+c  # Map Super+c -> Ctrl+c
+ \x03=Mod4+c  # Map Super+c -> Ctrl+c
 
 [mouse-bindings]
 # selection-override-modifiers=Shift
