--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -25,6 +25,8 @@ bold_italic_font     JetBrains Mono Bold Italic
 # bold_italic_font   Iosevka Term Bold Italic
 background_opacity 0.4
 font_size 15.0
+background_blur 10
+# background_image /usr/share/wallpapers/garuda-wallpapers/color.png
 
 modify_font cell_height +5px
 modify_font cell_width 105%
