--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -233,7 +233,7 @@ bind = ,122, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = ,123, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = ,121, exec, pactl set-sink-volume @DEFAULT_SINK@ 0%
 # other bindings
-bind = $mainMod, O, exec, firefox
+bind = $mainMod, O, exec, firedragon
 bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, F, fullscreenstate, 0 3
 bind = ,232,exec,brightnessctl -c backlight set 5%-
