--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -78,6 +78,7 @@ editor  /usr/local/bin/nvim
 allow_remote_control yes
 listen_on unix:/tmp/kitty
 shell_integration enabled
+shell /usr/bin/zsh
 
 # kitty-scrollback.nvim Kitten alias
 action_alias kitty_scrollback_nvim kitten /home/jr/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
@@ -107,10 +108,14 @@ map f7 layout_action rotate
 
 map f8 close_window
 
-map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
-map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
-map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
-map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+# map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+# map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
+# map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
+# map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+map ctrl+j kitten pass_keys.py bottom ctrl+j "^.* - nvim$"
+map ctrl+k kitten pass_keys.py top    ctrl+k "^.* - nvim$"
+map ctrl+h kitten pass_keys.py left   ctrl+h "^.* - nvim$"
+map ctrl+l kitten pass_keys.py right  ctrl+l "^.* - nvim$"
 
 # the 3 here is the resize amount, adjust as needed
 map alt+j kitten pass_keys.py relative_resize down  1 alt+j
