--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,13 +8,16 @@ bind-key C-b send-prefix
 bind-key r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # split pane commands
-bind-key \ split-window -h -c '#{pane_current_path}'
+bind-key | split-window -h -c '#{pane_current_path}'
 bind-key - split-window -v -c '#{pane_current_path}'
 
 # cycle through panes
 set-option -g repeat-time 500 #milliseconds
 bind-key -r p select-pane -t :.+
 bind-key -r P select-pane -t :.-
+
+# resize panes
+
 
 # set window and pane index to 1 (0 by default) for easier direct access
 set-option -g base-index 1
@@ -36,15 +39,10 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
@@ -60,7 +58,6 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
