--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -23,7 +23,7 @@ bold_italic_font     JetBrains Mono Bold Italic
 # bold_font          Iosevka Term Bold
 # italic_font        Iosevka Term Italic
 # bold_italic_font   Iosevka Term Bold Italic
-background_opacity 0.4
+background_opacity 0.8
 font_size 15.0
 background_blur 10
 # background_image /usr/share/wallpapers/garuda-wallpapers/color.png
@@ -72,7 +72,7 @@ tab_title_template   "{index}: {tab.active_exe}"
 macos_option_as_alt both
 macos_menubar_title_max_length 24
 
-editor  /usr/local/bin/nvim
+editor  /usr/bin/nvim
 
 
 allow_remote_control yes
@@ -80,6 +80,9 @@ listen_on unix:/tmp/kitty
 shell_integration enabled
 shell /usr/bin/zsh
 
+scrollback_lines 10000
+scrollback_indicator_opacity .5
+scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 # kitty-scrollback.nvim Kitten alias
 action_alias kitty_scrollback_nvim kitten /home/jr/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
 # Browse scrollback buffer in nvim
