more nvim changes

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -141,5 +141,6 @@ listen_on unix:/tmp/mykitty
 # include ./nord.conf
 # BEGIN_KITTY_THEME
 # Nord
-include current-theme.conf
+include theme.conf
+# include current-theme.conf
 # END_KITTY_THEME
