--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -23,9 +23,11 @@ bold_italic_font     JetBrains Mono Bold Italic
 # bold_font          Iosevka Term Bold
 # italic_font        Iosevka Term Italic
 # bold_italic_font   Iosevka Term Bold Italic
-background_opacity 0.8
-font_size 15.0
+background_opacity 0.7
+confirm_os_window_close 0
+font_size 12.0
 background_blur 10
+linux_display_server auto
 # background_image /usr/share/wallpapers/garuda-wallpapers/color.png
 
 modify_font cell_height +5px
@@ -59,6 +61,7 @@ font_features JetBrainsMono-Italic_Bold-Italic   +cv06 +cv07 +cv08 +calt
 # font_features Iosevka-Term-Bold-Italic   +ss05
 
 cursor_shape beam
+cursor #dddddd
 
 cursor_blink_interval 0
 
@@ -81,6 +84,7 @@ shell_integration enabled
 shell /usr/bin/zsh
 
 scrollback_lines 10000
+wheel_scroll_min_lines 1
 scrollback_indicator_opacity .5
 scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 # kitty-scrollback.nvim Kitten alias
