--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,80 +1,47 @@
-# vim:ft=kitty
+## name: Cyberpunk Neon
+## author: Theo (theo-grivel)
+## license: CC-BY-SA-4.0
+## upstream: https://github.com/Roboron3042/Cyberpunk-Neon/blob/master/terminal/kitty/cyberpunk-neon.conf
 
-## name:     Catppuccin-Mocha
-## author:   Pocco81 (https://github.com/Pocco81)
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
-## blurb:    Soothing pastel theme for the high-spirited!
+background            #000b1e
+foreground            #0abdc6
+selection_background  none
+selection_foreground  none
+cursor                #0abdc6
 
+# Black, Gray, Silver, White
 
+color0                #000b1e
+color8                #1c61c2
+color7                #0abdc6
+color15               #0abdc6
 
-# The basic colors
-foreground              #CDD6F4
-background              #1E1E2E
-selection_foreground    #1E1E2E
-selection_background    #F5E0DC
+# Red
 
-# Cursor colors
-cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
+color1                #ff0000
+color9                #ff0000
 
-# URL underline color when hovering with mouse
-url_color               #F5E0DC
+# Green
 
-# Kitty window border colors
-active_border_color     #B4BEFE
-inactive_border_color   #6C7086
-bell_border_color       #F9E2AF
+color2                #d300c4
+color10               #d300c4
 
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
+# Yellow
 
-# Tab bar colors
-active_tab_foreground   #11111B
-active_tab_background   #CBA6F7
-inactive_tab_foreground #CDD6F4
-inactive_tab_background #181825
-tab_bar_background      #11111B
+color3                #f57800
+color11               #ff5780
 
-# Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
-mark1_background #B4BEFE
-mark2_foreground #1E1E2E
-mark2_background #CBA6F7
-mark3_foreground #1E1E2E
-mark3_background #74C7EC
+# Blue
 
-# The 16 terminal colors
+color4                #133e7c
+color12               #00ff00
 
-# black
-color0 #45475A
-color8 #585B70
+# Purple
 
-# red
-color1 #F38BA8
-color9 #F38BA8
+color5                #711c91
+color13               #711c91
 
-# green
-color2  #A6E3A1
-color10 #A6E3A1
+# Teal
 
-# yellow
-color3  #F9E2AF
-color11 #F9E2AF
-
-# blue
-color4  #89B4FA
-color12 #89B4FA
-
-# magenta
-color5  #F5C2E7
-color13 #F5C2E7
-
-# cyan
-color6  #94E2D5
-color14 #94E2D5
-
-# white
-color7  #BAC2DE
-color15 #A6ADC8
+color6                #0abdc6
+color14               #0abdc6
