--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -38,7 +38,7 @@ draw_bold_text_with_bright_colors = true
   foreground = "#f8f8f2"
 
 [cursor]
-style = "Underline"
+style = "Block"
 
 [env]
 TERM = "xterm-256color"
