--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -4,8 +4,8 @@ shell=/usr/bin/fish #(if set, otherwise user's default shell from /etc/passwd)
 # term=foot (or xterm-256color if built with -Dterminfo=disabled)
  login-shell=no
 
-# app-id=foot
-# title=foot
+ app-id=foot
+ title=foot
 # locked-title=no
 
 font= JetbrainsMonoNL:size=14
