--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -61,7 +61,7 @@ font_features JetBrainsMono-Italic_Bold-Italic   +cv06 +cv07 +cv08 +calt
 # font_features Iosevka-Term-Bold-Italic   +ss05
 
 cursor_shape beam
-cursor #dddddd
+# cursor #dddddd
 
 cursor_blink_interval 0
 
@@ -144,7 +144,6 @@ listen_on unix:/tmp/mykitty
 
 # include ./nord.conf
 # BEGIN_KITTY_THEME
-# Nord
-include theme.conf
-# include current-theme.conf
+# Argonaut
+include current-theme.conf
 # END_KITTY_THEME
