--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,47 +1,21 @@
-## name: Cyberpunk Neon
-## author: Theo (theo-grivel)
-## license: CC-BY-SA-4.0
-## upstream: https://github.com/Roboron3042/Cyberpunk-Neon/blob/master/terminal/kitty/cyberpunk-neon.conf
-
-background            #000b1e
-foreground            #0abdc6
-selection_background  none
-selection_foreground  none
-cursor                #0abdc6
-
-# Black, Gray, Silver, White
-
-color0                #000b1e
-color8                #1c61c2
-color7                #0abdc6
-color15               #0abdc6
-
-# Red
-
-color1                #ff0000
-color9                #ff0000
-
-# Green
-
-color2                #d300c4
-color10               #d300c4
-
-# Yellow
-
-color3                #f57800
-color11               #ff5780
-
-# Blue
-
-color4                #133e7c
-color12               #00ff00
-
-# Purple
-
-color5                #711c91
-color13               #711c91
-
-# Teal
-
-color6                #0abdc6
-color14               #0abdc6
+background            #0d0f18
+foreground            #fffaf3
+cursor                #ff0017
+selection_background  #002a3a
+color0                #222222
+color8                #444444
+color1                #ff000f
+color9                #ff273f
+color2                #8ce00a
+color10               #abe05a
+color3                #ffb900
+color11               #ffd141
+color4                #008df8
+color12               #0092ff
+color5                #6c43a5
+color13               #9a5feb
+color6                #00d7eb
+color14               #67ffef
+color7                #ffffff
+color15               #ffffff
+selection_foreground #0d0f18
