--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -23,12 +23,8 @@ bold_italic_font     JetBrains Mono Bold Italic
 # bold_font          Iosevka Term Bold
 # italic_font        Iosevka Term Italic
 # bold_italic_font   Iosevka Term Bold Italic
-background_opacity 0.7
-confirm_os_window_close 0
-font_size 12.0
-background_blur 10
-linux_display_server auto
-# background_image /usr/share/wallpapers/garuda-wallpapers/color.png
+
+font_size 15.0
 
 modify_font cell_height +5px
 modify_font cell_width 105%
@@ -61,7 +57,6 @@ font_features JetBrainsMono-Italic_Bold-Italic   +cv06 +cv07 +cv08 +calt
 # font_features Iosevka-Term-Bold-Italic   +ss05
 
 cursor_shape beam
-# cursor #dddddd
 
 cursor_blink_interval 0
 
@@ -75,20 +70,16 @@ tab_title_template   "{index}: {tab.active_exe}"
 macos_option_as_alt both
 macos_menubar_title_max_length 24
 
-editor  /usr/bin/nvim
+editor  /usr/local/bin/nvim
 
 
 allow_remote_control yes
 listen_on unix:/tmp/kitty
 shell_integration enabled
-shell /usr/bin/zsh
 
-scrollback_lines 10000
-wheel_scroll_min_lines 1
-scrollback_indicator_opacity .5
-scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 # kitty-scrollback.nvim Kitten alias
-action_alias kitty_scrollback_nvim kitten /home/jr/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+# action_alias kitty_scrollback_nvim kitten /Users/jiangjoshua/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+
 # Browse scrollback buffer in nvim
 map kitty_mod+h kitty_scrollback_nvim
 map f9 kitty_scrollback_nvim
@@ -98,8 +89,6 @@ map f10 kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 # Show clicked command output in nvim
 mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
-map f2 copy_to_buffer a
-map f3 paste_from_buffer a
 
 enabled_layouts splits
 
@@ -117,14 +106,10 @@ map f7 layout_action rotate
 
 map f8 close_window
 
-# map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
-# map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
-# map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
-# map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
-map ctrl+j kitten pass_keys.py bottom ctrl+j "^.* - nvim$"
-map ctrl+k kitten pass_keys.py top    ctrl+k "^.* - nvim$"
-map ctrl+h kitten pass_keys.py left   ctrl+h "^.* - nvim$"
-map ctrl+l kitten pass_keys.py right  ctrl+l "^.* - nvim$"
+map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
+map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
+map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
 # the 3 here is the resize amount, adjust as needed
 map alt+j kitten pass_keys.py relative_resize down  1 alt+j
@@ -138,12 +123,14 @@ map shift+left move_window left
 map shift+right move_window right
 map shift+down move_window down
 
+map ctrl+h send_text normal \x7f
+
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
 
 
 # include ./nord.conf
 # BEGIN_KITTY_THEME
-# Argonaut
+# Nord
 include current-theme.conf
 # END_KITTY_THEME
