--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,6 +1,6 @@
-# live_config_reload = true
+live_config_reload = true
 import = [
-  "/usr/local/lib/node_modules/alacritty-themes/themes/Catppuccin-Macchiato.toml"
+  "/home/jr/.config/node_modules/lib/node_modules/alacritty-themes/themes/Kanagawa.toml"
 ]
 
 [shell]
@@ -47,16 +47,16 @@ TERM = "xterm-256color"
 size = 14
 
   [font.bold]
-  family = "FiraCode Nerd Font Mono"
+  family = "JetbrainsMonoNL"
 
   [font.bold_italic]
-  family = "FiraCode Nerd Font Mono"
+  family = "JetbrainsMonoNL"
 
   [font.italic]
-  family = "FiraCode Nerd Font Mono"
+  family = "JetbrainsMonoNL"
 
   [font.normal]
-  family = "FiraCode Nerd Font Mono"
+  family = "JetbrainsMonoNL"
 
 [[keyboard.bindings]]
 action = "Paste"
