--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -24,7 +24,8 @@ bold_italic_font     JetBrains Mono Bold Italic
 # italic_font        Iosevka Term Italic
 # bold_italic_font   Iosevka Term Bold Italic
 
-font_size 15.0
+font_size 12.0
+background_opacity 1.0
 
 modify_font cell_height +5px
 modify_font cell_width 105%
@@ -79,6 +80,7 @@ shell_integration enabled
 
 # kitty-scrollback.nvim Kitten alias
 # action_alias kitty_scrollback_nvim kitten /Users/jiangjoshua/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+action_alias kitty_scrollback_nvim kitten /home/jr/.local/share/neobean/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py --nvim-args --clean --noplugin -n
 
 # Browse scrollback buffer in nvim
 map kitty_mod+h kitty_scrollback_nvim
