--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,10 +9,10 @@
 # italic_font          JetBrainsMono Nerd Font Mono Italic
 # bold_italic_font     JetBrainsMono Nerd Font Mono Bold Italic
 
-font_family          JetBrains Mono Regular
-bold_font            JetBrains Mono Bold
-italic_font          JetBrains Mono Italic
-bold_italic_font     JetBrains Mono Bold Italic
+font_family          JetBrainsMono Nerd Font Regular
+bold_font            JetBrainsMono Nerd Font Bold
+italic_font          JetBrainsMonoNL Nerd FontItalic
+bold_italic_font     JetBrainsMono Bold Italic
 
 # font_family             SF Mono Regular
 # bold_font               SF Mono Bold
@@ -24,8 +24,9 @@ bold_italic_font     JetBrains Mono Bold Italic
 # italic_font        Iosevka Term Italic
 # bold_italic_font   Iosevka Term Bold Italic
 
-font_size 12.0
-background_opacity 1.0
+font_size 14.0
+background_opacity 0.8
+linux_display_server auto
 
 modify_font cell_height +5px
 modify_font cell_width 105%
@@ -57,7 +58,7 @@ font_features JetBrainsMono-Italic_Bold-Italic   +cv06 +cv07 +cv08 +calt
 # font_features Iosevka-Term-Italic        +ss05
 # font_features Iosevka-Term-Bold-Italic   +ss05
 
-cursor_shape beam
+cursor_shape block
 
 cursor_blink_interval 0
 
@@ -81,6 +82,11 @@ shell_integration enabled
 # kitty-scrollback.nvim Kitten alias
 # action_alias kitty_scrollback_nvim kitten /Users/jiangjoshua/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
 action_alias kitty_scrollback_nvim kitten /home/jr/.local/share/neobean/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py --nvim-args --clean --noplugin -n
+
+scrollback_lines 2000
+wheel_scroll_min_lines 1
+
+enable_audio_bell no
 
 # Browse scrollback buffer in nvim
 map kitty_mod+h kitty_scrollback_nvim
