Hyprland and Sway configs

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -33,6 +33,7 @@ modify_font cell_width 105%
 
 modify_font underline_position 4
 modify_font underline_thickness 200%
+confirm_os_window_close 0
 
 disable_ligatures cursor
 
@@ -72,7 +73,8 @@ tab_title_template   "{index}: {tab.active_exe}"
 macos_option_as_alt both
 macos_menubar_title_max_length 24
 
-editor  /usr/local/bin/nvim
+editor  /usr/bin/nvim
+shell /usr/bin/zsh
 
 
 allow_remote_control yes
@@ -81,7 +83,7 @@ shell_integration enabled
 
 # kitty-scrollback.nvim Kitten alias
 # action_alias kitty_scrollback_nvim kitten /Users/jiangjoshua/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
-action_alias kitty_scrollback_nvim kitten /home/jr/.local/share/neobean/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py --nvim-args --clean --noplugin -n
+action_alias kitty_scrollback_nvim kitten /home/jr/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py --nvim-args --clean --noplugin -n
 
 scrollback_lines 2000
 wheel_scroll_min_lines 1
@@ -139,6 +141,6 @@ listen_on unix:/tmp/mykitty
 
 # include ./nord.conf
 # BEGIN_KITTY_THEME
-# Nord
+# spaceduck
 include current-theme.conf
 # END_KITTY_THEME
