--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,21 +1,40 @@
-background            #0d0f18
-foreground            #fffaf3
-cursor                #ff0017
-selection_background  #002a3a
-color0                #222222
-color8                #444444
-color1                #ff000f
-color9                #ff273f
-color2                #8ce00a
-color10               #abe05a
-color3                #ffb900
-color11               #ffd141
-color4                #008df8
-color12               #0092ff
-color5                #6c43a5
-color13               #9a5feb
-color6                #00d7eb
-color14               #67ffef
-color7                #ffffff
-color15               #ffffff
-selection_foreground #0d0f18
+# vim:ft=kitty
+
+#: Repository: https://github.com/pineapplegiant/spaceduck
+
+## name:     spaceduck
+## author:   Guillermo Rodriguez
+## license:  MIT
+
+## upstream: https://github.com/foofrog/kitty-themes/blob/master/themes/spaceduck.conf
+
+## blurb:    An intergalactic space theme for Vim, Terminal & more!
+
+#: Disclaimer: Yellow and Purple colors are intentionally swapped by the author
+#: This is because Spaceduck is a purple-oriented colorscheme
+#: To check out the visual differences, refer to this issue: https://github.com/pineapplegiant/spaceduck-terminal/pull/2
+
+background           #0f111b
+foreground           #ecf0c1
+
+cursor               #ecf0c1
+
+selection_background #686f9a
+selection_foreground #ffffff
+
+color0               #000000
+color8               #686f9a
+color1               #e33400
+color9               #e33400
+color2               #5ccc96
+color10              #5ccc96
+color3               #b3a1e6
+color11              #b3a1e6
+color4               #00a3cc
+color12              #00a3cc
+color5               #f2ce00
+color13              #f2ce00
+color6               #7a5ccc
+color14              #7a5ccc
+color7               #686f9a
+color15              #f0f1ce
