--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -5,12 +5,14 @@
     "margin": "10, 5, 0, 5",
     "modules-left": ["custom/launcher","custom/separator","cpu","custom/separator","memory","custom/separator","network","custom/separator","custom/updates","custom/separator","custom/keyboard-layout","custom/separator","custom/network_traffic","custom/separator","idle_inhibitor"],
     "modules-center": ["hyprland/workspaces",],
-    "modules-right": [ "tray", "custom/separator", "backlight", "custom/separator", "battery", "custom/separator", "pulseaudio", "custom/separator", "clock", "custom/separator","custom/power"],
+    "modules-right": [ "tray", "custom/separator", "backlight", "custom/separator", "battery", "custom/separator", "pipewire", "custom/separator", "clock", "custom/separator","custom/power"],
 
-    "custom/launcher": {
-        "format": "  ",
-        "on-click" : "exec nwg-drawer -c 7 -is 70 -spacing 23",
-    },
+"custom/launcher": {
+        //"format":"<U+F44E>",
+        "format":"    ",
+        "tooltip": false,
+        "on-click": "exec nwg-drawer -c 7 -is 70 -spacing 23",
+     },
     "hyprland/workspaces": {
         "format": "{icon}",
         "on-click": "activate",
@@ -53,12 +55,12 @@
     },
     "cpu": {
         "format": "; {usage}%",
-        "on-click": "footclient -e 'htop'",
+        "on-click": "footclient -e 'btop'",
     },
     "memory": {
         "interval": 30,
         "format": " {used:0.2f}GB",
-        "on-click": "footclient -e 'htop'",
+        "on-click": "footclient -e 'btop'",
         "max-length": 10,
         "critical": 80
     },
@@ -130,7 +132,7 @@
       	"format": " Cheat", // Icon: keyboard
         "on-click": "~/.local/bin/keyhint.sh",
      },
-    "pulseaudio": {
+    "pipewire": {
       // "scroll-step": 1, // %, can be a float
       "format": "{icon} {volume}% {format_source}",
       "format-bluetooth": "{icon} {volume}% {format_source}",
