--- a/btop/.config/btop/btop.conf
+++ b/btop/.config/btop/btop.conf
@@ -38,7 +38,7 @@ graph_symbol = "braille"
 graph_symbol_cpu = "default"
 
 # Graph symbol to use for graphs in gpu box, "default", "braille", "block" or "tty".
-graph_symbol_gpu = "default"
+graph_symbol_gpu = "block"
 
 # Graph symbol to use for graphs in cpu box, "default", "braille", "block" or "tty".
 graph_symbol_mem = "default"
@@ -50,7 +50,7 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = ""
+shown_boxes = "proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 2000
@@ -224,13 +224,13 @@ show_battery_watts = True
 log_level = "WARNING"
 
 #* Measure PCIe throughput on NVIDIA cards, may impact performance on certain cards.
-nvml_measure_pcie_speeds = True
+nvml_measure_pcie_speeds = False
 
 #* Horizontally mirror the GPU graph.
 gpu_mirror_graph = True
 
 #* Custom gpu0 model name, empty string to disable.
-custom_gpu_name0 = ""
+custom_gpu_name0 = "Lucienne"
 
 #* Custom gpu1 model name, empty string to disable.
 custom_gpu_name1 = ""
