--- a/hypr/.config/hypr/execs.conf
+++ b/hypr/.config/hypr/execs.conf
@@ -7,7 +7,7 @@ exec-once = nm-applet --indicator
  exec-once = .local/bin/locale.sh
 
 # Set monitor values. For own values, please comment with #
-#exec-once = .local/bin/mon.sh
+exec-once = .local/bin/mon.sh
 
 # exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-Dark"   # for GTK3 apps
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
@@ -15,10 +15,12 @@ exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # 
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
-exec-once = swww-daemon --forman xrgb
+# exec-once = swww-daemon --forman xrgb
 
 # background
 exec-once = wpaperd
+
+exec-once = hypridle
 
 # pyprland
 exec-once = pypr &
