--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -3,10 +3,10 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod SHIFT, R, exec, hyprctl reload
-bind = $mainMod, 36, exec, footclient  # 36 = Enter
-bind = $mainMod, W, exec, wezterm
-bind = $mainMod, T, exec, footclient
-bind = $mainMod, Y, exec, kitty
+bind = $mainMod, 36, exec, ghostty  # 36 = Enter
+bind = $mainMod, W, exec, zen-browser
+bind = $mainMod, T, exec, kitty
+# bind = $mainMod, Y, exec, kitty
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exec, nwgbar
 bind = $mainMod , D, exec, wofi --show drun
@@ -101,7 +101,7 @@ bind = ,XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle; n
 # other bindings
 bind = $mainMod, O, exec, firefox
 bind = $mainMod, M, fullscreen, 1
-bind = $mainMod, F, fullscreen, 0
+bind = ALT, Return, fullscreen, 0
 bind = $mainMod SHIFT, F, fullscreenstate, 0 2
 bind = ,232,exec,brightnessctl -c backlight set 5%-
 bind = ,233,exec,brightnessctl -c backlight set +5%
