--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,18 +1,18 @@
-# font_family        Fira Code Retina
-# bold_font          Fira Code Bold
-# bold_font          auto
-# italic_font        auto
-# bold_italic_font   auto
+font_family        Fira Code Retina
+bold_font          Fira Code Bold
+bold_font          auto
+italic_font        auto
+bold_italic_font   auto
 
 # font_family          JetBrainsMono Nerd Font Mono Regular
 # bold_font            JetBrainsMono Nerd Font Mono Bold
 # italic_font          JetBrainsMono Nerd Font Mono Italic
 # bold_italic_font     JetBrainsMono Nerd Font Mono Bold Italic
 
-font_family          JetBrainsMono Nerd Font Regular
-bold_font            JetBrainsMono Nerd Font Bold
-italic_font          JetBrainsMonoNL Nerd FontItalic
-bold_italic_font     JetBrainsMono Bold Italic
+# font_family          JetBrainsMono Nerd Font Regular
+# bold_font            JetBrainsMono Nerd Font Bold
+# italic_font          JetBrainsMonoNL Nerd FontItalic
+# bold_italic_font     JetBrainsMono Bold Italic
 
 # font_family             SF Mono Regular
 # bold_font               SF Mono Bold
