--- a/hypr/.config/hypr/windowrules.conf
+++ b/hypr/.config/hypr/windowrules.conf
@@ -1,8 +1,8 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # Example windowrule v1
 #windowrule = float, ^(kitty)$
-windowrule = float, ^(bleachbit)$
-windowrule = float, ^(zathura)$
+# windowrule = float, ^(bleachbit)$
+# windowrule = float, ^(zathura)$
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
@@ -19,10 +19,10 @@ blurls = gedit
 blurls = gtk-layer-shell # for nwg-drawer
 blurls = catfish
 # window rules
-windowrule = opacity 0.85 override 0.85 override,^(thunar)$
-windowrule = opacity 0.85 override 0.85 override,^(gedit)$
-windowrule = opacity 0.85 override 0.85 override,^(catfish)$
-windowrule = stayfocused, ^(wofi)$
+# windowrule = opacity 0.85 override 0.85 override,^(thunar)$
+# windowrule = opacity 0.85 override 0.85 override,^(gedit)$
+# windowrule = opacity 0.85 override 0.85 override,^(catfish)$
+# windowrule = stayfocused, ^(wofi)$
 
 # window rules with evaluation
 windowrulev2 = opacity 0.85 0.85,floating:1
