--- a/hypr/.config/hypr/windowrules.conf
+++ b/hypr/.config/hypr/windowrules.conf
@@ -17,6 +17,7 @@ blurls = wofi
 blurls = thunar
 blurls = gedit
 blurls = gtk-layer-shell # for nwg-drawer
+blurls = nwg-launchers
 blurls = catfish
 # window rules
 # windowrule = opacity 0.85 override 0.85 override,^(thunar)$
