--- a/hypr/.config/hypr/execs.conf
+++ b/hypr/.config/hypr/execs.conf
@@ -30,7 +30,7 @@ exec-once = waybar
 
 exec-once = mako
 exec-once =/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = foot --server
+# exec-once = foot --server
 # experimental(might work might won't)
 
 # pre executions (under development)
