--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -13,10 +13,21 @@ $font_material_symbols = Material Symbols Rounded
 background {
     # color = rgba(0D0D17FF)
     color = rgba(000000FF)
+    path = "/home/jr/Pictures/wallpapers/Aesthetic Scenery.jpg"
     # path = {{ SWWW_WALL }}
     # path = screenshot
     # blur_size = 5
     # blur_passes = 4
+}
+image {
+    monitor =
+    path = /home/jr/Pictures/wallpapers/anon2.png
+    size = 150
+    rounding = 0 # no rounding
+
+    position = 0, 200
+    halign = center
+    valign = center
 }
 input-field {
     monitor =
