--- a/hypr/.config/hypr/execs.conf
+++ b/hypr/.config/hypr/execs.conf
@@ -20,6 +20,8 @@ exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # 
 # background
 exec-once = wpaperd
 
+exec-once = udiskie -2 &
+
 exec-once = hypridle
 
 # pyprland
