--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -74,7 +74,7 @@ macos_option_as_alt both
 macos_menubar_title_max_length 24
 
 editor  /usr/bin/nvim
-shell /usr/bin/zsh
+shell /usr/bin/nu
 
 
 allow_remote_control yes
