--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -1,5 +1,8 @@
-# theme = "catppuccin_macchiato"
-theme = "tokyonight"
+# theme = "catppuccin_mocha"
+# theme = "tokyonight_moon"
+# theme = "dracula"
+# theme = "base16_transparent"
+theme = "kanagawa"
 
 [editor]
 line-number = "relative"
@@ -16,6 +19,7 @@ bufferline = "multiple"
 jump-label-alphabet = "jfkdls;aurieowpqnvmcxz"
 default-yank-register = "+"
 # end-of-line-diagnostics = "hint"
+# shell = ["nu"]
 
 [editor.inline-diagnostics]
 # cursor-line = "error"
@@ -30,19 +34,21 @@ select = "underline"
 
 [editor.soft-wrap]
 enable = true
-# wrap-at-text-width = true
+max-wrap = 10             # increase to reduce forced mid-word wrapping
+max-indent-retain = 14
+wrap-at-text-width = true
 wrap-indicator = ""
 [editor.statusline]
 left = ["mode", "spinner"]
 center = ["file-name"]
 right = [
-  "diagnostics",
-  "workspace-diagnostics",
-  "selections",
-  "file-type",
-  "file-encoding",
-  "position-percentage",
-  "position",
+	"diagnostics",
+	"workspace-diagnostics",
+	"selections",
+	"file-type",
+	"file-encoding",
+	"position-percentage",
+	"position",
 ]
 
 [editor.auto-pairs]
@@ -70,29 +76,39 @@ character = "╎" # Some characters that work well: "▏", "┆", "┊", "⸽"
 skip-levels = 1
 
 [keys.normal]
+V = ["goto_first_nonwhitespace", "extend_to_line_end"]
+D = ["ensure_selections_forward", "extend_to_line_end"]
+x = ["extend_line"]
 ins = "insert_mode"
 esc = ["collapse_selection", "keep_primary_selection"]
 C-o = ":open ~/.config/helix/config.toml" # Maps Ctrl-o to opening of the helix config file
 C-r = ":config-reload"
-C-y = [
-  ':sh rm -f /tmp/unique-file',
-  ':insert-output yazi %{buffer_name} --chooser-file=/tmp/unique-file',
-  ':insert-output echo "\x1b[?1049h\x1b[?2004h" > /dev/tty',
-  ':open %sh{cat /tmp/unique-file}',
-  ':redraw',
+C-y = [ # Yazi
+	':sh rm -f /tmp/unique-file',
+	':insert-output yazi %{buffer_name} --chooser-file=/tmp/unique-file',
+	':insert-output echo "\x1b[?1049h\x1b[?2004h" > /dev/tty',
+	':open %sh{cat /tmp/unique-file}',
+	':redraw',
+]
+C-g = [ # LazyGit
+	":write-all",
+	":new",
+	":insert-output lazygit",
+	":buffer-close!",
+	":redraw",
+	":reload-all",
 ]
 "A-x" = "@x<A-d>" # maps Alt-x to a macro selecting the whole line and deleting it without yanking it
 H = ":buffer-previous"
 L = ":buffer-next"
 C-q = ":buffer-close"
-space."." = ":fmt"
 
-g = { a = "code_action" } # ga to open code actions
+g = {a = "code_action"} # ga to open code actions
 X = "extend_line_above" # Shift+x to select the whole line above
-D = [
-  "extend_to_line_end",
-  "change_selection",
-] # Wipe and edit the current line from cursor position
+# D = [
+# 	"extend_to_line_end",
+# 	"change_selection",
+# ] # Wipe and edit the current line from cursor position
 # c = ["trim_selections", "change_selection"] # Make 'c' automatically strip the selection of extra whitespace
 # a = ["append_mode", "collapse_selection"] # Remove the selection when entering insert mode with 'a'
 "tab" = "goto_next_function"   # Select and jump to the next function via Treesitter
@@ -101,46 +117,66 @@ D = [
 p = "paste_clipboard_before"
 y = "yank_main_selection_to_clipboard"
 
-# https://github.com/helix-editor/helix/discussions/7908
-space.x = ":toggle whitespace.render all none"
-
 # Mark line and move with them up/down
 # https://github.com/helix-editor/helix/discussions/5764#discussioncomment-4840408
 C-j = ["extend_to_line_bounds", "delete_selection", "paste_after"]
 C-k = [
-  "extend_to_line_bounds",
-  "delete_selection",
-  "move_line_up",
-  "paste_before",
+	"extend_to_line_bounds",
+	"delete_selection",
+	"move_line_up",
+	"paste_before",
 ]
 
 # Duplicate lines up/down
 # https://github.com/helix-editor/helix/issues/3680#issuecomment-1399443274
 # Also in [keys.insert]
 S-A-down = [
-  "normal_mode",
-  "extend_to_line_bounds",
-  "yank",
-  "open_below",
-  "replace_with_yanked",
-  "collapse_selection",
+	"normal_mode",
+	"extend_to_line_bounds",
+	"yank",
+	"open_below",
+	"replace_with_yanked",
+	"collapse_selection",
 ]
 S-A-up = [
-  "normal_mode",
-  "extend_to_line_bounds",
-  "yank",
-  "open_above",
-  "replace_with_yanked",
-  "collapse_selection",
+	"normal_mode",
+	"extend_to_line_bounds",
+	"yank",
+	"open_above",
+	"replace_with_yanked",
+	"collapse_selection",
 ]
 
 S-space = ["half_page_up"]
 
+[keys.normal.space]
+e = [ # Yazi
+	":sh rm -f /tmp/unique-file-h21a434",
+	":insert-output yazi '%{buffer_name}' --chooser-file=/tmp/unique-file-h21a434",
+	":insert-output echo \"x1b[?1049h\" > /dev/tty",
+	":open %sh{cat /tmp/unique-file-h21a434}",
+	":redraw",
+]
+E = [ # Yazi
+	":sh rm -f /tmp/unique-file-u41ae14",
+	":insert-output yazi '%{workspace_directory}' --chooser-file=/tmp/unique-file-u41ae14",
+	":insert-output echo \"x1b[?1049h\" > /dev/tty",
+	":open %sh{cat /tmp/unique-file-u41ae14}",
+	":redraw",
+]
+
+"." = ":fmt"
+x = ":toggle whitespace.render all none"
+q = ":quit"
+# [keys.select.ret]
+# s = ":sh tmux popup -xC -yC -w90% -h90% -E scooter"
+[keys.select]
+";" = ["collapse_selection", "normal_mode"]
+x = "extend_line"
+V = "extend_to_line_end"
 [keys.normal.z]
 j = "scroll_up"
 k = "scroll_down"
-#[keys.normal.space]
-#space."." = "file_picker_in_current_buffer_directory"
 [keys.normal."+"]
 b = ":run-shell-command cargo build"
 r = ":run-shell-command cargo run"
