--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -9,105 +9,154 @@ $entry_color = rgba(FFFFFFFF)
 $font_family = Rubik Light
 $font_family_clock = Rubik Light
 $font_material_symbols = Material Symbols Rounded
+$scripts = $HOME/.config/hypr/scripts
+
+general {
+    grace = 1
+    fractional_scaling = 2
+    immediate_render = true
+}
 
 background {
-    # color = rgba(0D0D17FF)
-    color = rgba(000000FF)
-    path = "/home/jr/Pictures/wallpapers/Aesthetic Scenery.jpg"
-    # path = {{ SWWW_WALL }}
-    # path = screenshot
-    # blur_size = 5
-    # blur_passes = 4
+    monitor =
+    # NOTE: use only 1 path
+	#path = screenshot   # screenshot of your desktop
+    path = $HOME/Pictures/wallpapers/Aesthetic Scenery.jpg # current wallpaper
+    
+    color = rgb(0,0,0) # color will be rendered initially until path is available
+
+    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
+    blur_size = 3
+    blur_passes = 2 # 0 disables blurring
+    noise = 0.0117
+    contrast = 1.3000 # Vibrant!!!
+    brightness = 0.8000
+    vibrancy = 0.2100
+    vibrancy_darkness = 0.0
 }
+
+
+# Date
+label {
+    monitor =
+    text = cmd[update:18000000] echo "<b> "$(date +'%A, %-d %B')" </b>"
+    color = $color13
+    font_size = 18
+    font_family = Victor Mono Bold Italic
+    position = 0, -120
+    halign = center
+    valign = center
+}
+
+# Hour-Time
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +"%H")"
+#    text = cmd[update:1000] echo "$(date +"%I")" #AM/PM
+	#color = rgba(255, 185, 0, .8)
+    color = $color13
+    font_size = 240
+    font_family = JetBrainsMono Nerd Font ExtraBold 
+    position = 0, -100
+    halign = center
+    valign = top
+}
+
+# Minute-Time
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +"%M")"
+    #color = rgba(15, 10, 222, .8)
+    color = $color12
+    font_size = 240
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, -450
+    halign = center
+    valign = top
+}
+
+# Seconds-Time
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +"%S")"
+#    text = cmd[update:1000] echo "$(date +"%S %p")" #AM/PM
+    color = $color11
+    font_size = 50
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, -450
+    halign = center
+    valign = top
+}
+
+# Put a picture of choice here. Default is the current wallpaper
 image {
     monitor =
-    path = /home/jr/Pictures/wallpapers/anon2.png
-    size = 150
-    rounding = 0 # no rounding
+    path = $HOME/Pictures/wallpapers/anon2.png
+    size = 160
+    rounding = -1
+    border_size = 0
+    border_color = $color11
+    rotate = 0
+    reload_time = -1
+    position = 0, 400
+    halign = center
+    valign = bottom
+}
 
+# USER
+label {
+    monitor =
+    text =   $USER
+    color = $color13
+    font_size = 24
+    font_family = Victor Mono Bold Oblique
     position = 0, 200
     halign = center
-    valign = center
+    valign = bottom
 }
+
+
+# INPUT FIELD
 input-field {
     monitor =
-    size = 250, 50
+    size = 300, 60
     outline_thickness = 2
-    dots_size = 0.1
-    dots_spacing = 0.3
-    outer_color = $entry_border_color
-    inner_color = $entry_background_color
-    font_color = $entry_color
-    # fade_on_empty = true
-
-    position = 0, 20
-    halign = center
-    valign = center
-}
-
-label { # Clock
-    monitor =
-    text = $TIME
-    shadow_passes = 1
-    shadow_boost = 0.5
-    color = $text_color
-    font_size = 65
-    font_family = $font_family_clock
-
-    position = 0, 300
-    halign = center
-    valign = center
-}
-label { # Greeting
-    monitor =
-    text = hi $USER !!!
-    shadow_passes = 1
-    shadow_boost = 0.5
-    color = $text_color
-    font_size = 20
-    font_family = $font_family
-
-    position = 0, 240
-    halign = center
-    valign = center
-}
-label { # lock icon
-    monitor =
-    text = lock
-    shadow_passes = 1
-    shadow_boost = 0.5
-    color = $text_color
-    font_size = 21
-    font_family = $font_material_symbols
-
-    position = 0, 65
-    halign = center
-    valign = bottom
-}
-label { # "locked" text
-    monitor =
-    text = locked
-    shadow_passes = 1
-    shadow_boost = 0.5
-    color = $text_color
-    font_size = 14
-    font_family = $font_family
-
-    position = 0, 45
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    outer_color = $color11
+    inner_color = rgba(255, 255, 255, 0.1)
+    font_color = $color13
+    capslock_color = rgb(255,255,255)
+    fade_on_empty = false
+    font_family = Victor Mono Bold Oblique
+    placeholder_text = <i><span foreground="##ffffff99">🔒 Type Password</span></i>
+    hide_input = false
+    position = 0, 100
     halign = center
     valign = bottom
 }
 
-label { # Status
+# uptime
+label {
     monitor =
-    text = cmd[update:5000] ~/.config/hypr/hyprlock/status.sh
-    shadow_passes = 1
-    shadow_boost = 0.5
-    color = $text_color
-    font_size = 14
-    font_family = $font_family
+    text = cmd[update:60000] echo "<b> "$(uptime -p || $scripts/UptimeNixOS.sh)" </b>"
+    color = $color13
+    font_size = 18
+    font_family = Victor Mono Bold Oblique
+    position = 0, 0
+    halign = right
+    valign = bottom
+}
 
-    position = 30, -30
+# weather edit the scripts for locations
+label {
+    monitor =
+    text = cmd[update:3600000] [ -f "$HOME/.cache/.weather_cache" ] && cat  "$HOME/.cache/.weather_cache"
+    color = $color13
+    font_size = 18
+    font_family = Victor Mono Bold Oblique
+    position = 50, 0
     halign = left
-    valign = top
+    valign = bottom
 }
