--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -3,10 +3,10 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod SHIFT, R, exec, hyprctl reload
-bind = $mainMod, 36, exec, wezterm  # 36 = Enter
+bind = $mainMod, 36, exec, ghostty  # 36 = Enter
 bind = $mainMod, W, exec, zen-browser
-bind = $mainMod, T, exec, kitty
-bind = $mainMod, G, exec, ghostty
+bind = $mainMod, T, exec, wezterm
+bind = $mainMod, G, exec, kitty
 # bind = $mainMod, Y, exec, kitty
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exec, nwgbar
