--- a/hypr/.config/hypr/execs.conf
+++ b/hypr/.config/hypr/execs.conf
@@ -4,7 +4,7 @@
 exec-once = nm-applet --indicator
 
 # Set keyboard layout
- exec-once = .local/bin/locale.sh
+exec-once = .local/bin/locale.sh
 
 # Set monitor values. For own values, please comment with #
 exec-once = .local/bin/mon.sh
@@ -21,6 +21,8 @@ exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # 
 exec-once = wpaperd
 
 exec-once = udiskie -2 &
+
+exec-once = thunar --daemon
 
 exec-once = hypridle
 
