--- a/hypr/.config/hypr/execs.conf
+++ b/hypr/.config/hypr/execs.conf
@@ -25,7 +25,7 @@ exec-once = udiskie -2 &
 exec-once = thunar --daemon
 
 exec-once = hypridle
-
+exec-once = hyprsunset
 # pyprland
 exec-once = pypr &
 
