--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -23,6 +23,8 @@ bind = $mainMod SHIFT, Delete, exec, hyprlock
 # pyprland
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
 bind = $mainMod, Z, exec, pypr zoom # Toggle Zoom
+bindel = ,XF86MonBrightnessDown, exec, hyprctl hyprsunset gamma -10
+bindel = ,XF86MonBrightnessUp, exec, hyprctl hyprsunset gamma +10
 
 # Mainmod + Function keys
 bind = $mainMod, F1, exec, firedragon
